--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,14 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
@@ -61,6 +69,7 @@
         <artifactId>jboss-jaxrs-api_1.1_spec</artifactId>
         <version>1.0.1.Final</version>
     </dependency>
+
 
 </dependencies>
 
