--- a/pom.xml
+++ b/pom.xml
@@ -69,8 +69,14 @@
         <artifactId>jboss-jaxrs-api_1.1_spec</artifactId>
         <version>1.0.1.Final</version>
     </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>2.6.0</version>
+        </dependency>
 
 
-</dependencies>
+    </dependencies>
+
 
 </project>
